kubernetes-new/Removed/05_cvat_proxy_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cvat-proxy
  namespace: cvat
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cvat-frontend-service
                port:
                  number: 80
          - path: /api/.*|git/.*|opencv/.*|analytics/.*|static/.*|admin(?:/(.*))?.*|documentation/.*|django-rq(?:/(.*))?
            pathType: Prefix
            backend:
              service:
                name: cvat-backend-service
                port:
                  number: 8080
